--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Media Player Card</title>
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <div class="card-container">
+      <!-- Add this draggable region -->
+      <div class="drag-region"></div>
+      
       <div class="window-controls">
         <button class="window-button minimize">
           <span class="minimize-icon"></span>
@@ -18,16 +21,16 @@
       </div>
 
       <div class="card-face front">
-        <img src="/svgs/cards/diamonds_2.svg" alt="Playing Card" class="card-image" />
+        <img src="svgs/cards/diamonds_2.svg" alt="Playing Card" class="card-image" />
       </div>
       <div class="card-face back">
-        <img src="/svgs/cards/card_back.svg" alt="Card Back" class="card-image" />
+        <img src="svgs/cards/card_back.svg" alt="Card Back" class="card-image" />
       </div>
 
       <div class="ui-elements">
         <div class="white-frame">
           <div class="album-frame">
-            <img src="/svgs/placeholder_album_cover.jpeg" alt="Placeholder Album Cover" class="album-cover-image" />
+            <img src="svgs/placeholder_album_cover.jpeg" alt="Placeholder Album Cover" class="album-cover-image" />
           </div>
           <div class="text-content">Let's get it started - Spike mixed by DJ</div>
           <div class="slider-container">
@@ -38,19 +41,19 @@
           </div>
           <div class="controls">
             <button class="control-button previous">
-              <img src="/svgs/prev.svg" alt="Previous" />
+              <img src="svgs/prev.svg" alt="Previous" />
             </button>
             <button class="control-button play">
-              <img src="/svgs/play.svg" alt="Play" />
+              <img src="svgs/play.svg" alt="Play" />
             </button>
             <button class="control-button next">
-              <img src="/svgs/next.svg" alt="Next" />
+              <img src="svgs/next.svg" alt="Next" />
             </button>
           </div>
         </div>
       </div>
     </div>
 
-    <script src="/js/app.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
